--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -63,3 +63,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_APP_URL="${APP_URL}"
+
+PUSHER_APP_ID=1962049
+PUSHER_APP_KEY=dcf5e474b98ef1bf5bb2
+PUSHER_APP_SECRET=f641137de94a1347f769
+PUSHER_APP_CLUSTER=eu
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
